Live Reload 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#Live Reload 기능 활성화
+spring.devtools.livereload.enabled=true
 
 # MySQL 연결 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
