--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,18 @@ spring.jpa.properties.hibernate.format_sql=true
 # 쿼리에 물음표로 출력되는 바인드 파라미터 출력
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#파일 한 개당 최대 사이즈
+spring.servlet.multipart.max-file-size=20MB
+
+#요청당 최대 파일 크기
+spring.servlet.multipart.max-request-size=100MB
+
+#상품 이미지 업로드 경로
+itemImgLocation=C:/shop/item
+
+#리소스 업로드 경로
+uploadPath=file://C:/shop/
+
