--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,5 @@ spring.servlet.multipart.max-request-size=100MB
 itemImgLocation=C:/shop/item
 
 #리소스 업로드 경로
-uploadPath=file://C:/shop/
+uploadPath=file:///C:/shop/
 
