--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ itemImgLocation=C:/shop/item
 #리소스 업로드 경로
 uploadPath=file:///C:/shop/
 
+#기본 batch size 설정
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
