--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### 파일 제외 ###
+git rm --cached src/main/resources/application.properties
+
+### 디렉토리 제외 ###
+#git rm --cached 폴더명\ -r
